[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vllmd"
version = "0.1.0"
description = "Dynamic vLLM dispatcher — start, scale, and manage vLLM workers on Slurm clusters"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",     # httpx mock
]

[project.scripts]
vllmd = "vllmd.cli:app"
vllmd-worker = "vllmd.worker:main"   # entry point called inside each sbatch job

[tool.setuptools.packages.find]
where = ["."]
include = ["vllmd*"]
